<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bei Nafu</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome To Beinafu</string>
	<string name="app_description">Bei Nafu Is An App That Helps Users Find Products Sold At Retail Price In Kisumu Area</string>
	<string name="electronics">Electronics &amp; Technology</string>
	<string name="houselifestyle">House &amp; Lifestyle</string>
	<string name="mobilephones">Mobile Phones &amp; Gadgets</string>
	<string name="mapretails">Map Retails</string>
	<string name="miscellaneous">Miscellaneous</string>
	<string name="title_2">Developed At Lakehub Community</string>
	<string name="app_version">Version 1.0.0\nCopyright © 2013 Lakehub, Inc. All Rights Reserved.</string>
	<string name="menu"><b>Main Menu</b></string>
	<string name="test_string">Test String</string>
	<string name="electronics_title"><b>Electronics - On Sale !</b></string>
	<string name="houselifestyle_title"><b>Lifestyle Stuff - On Sale !</b></string>
	<string name="mapretails_title"><b>Map - Items Location</b></string>
	<string name="mobilephones_title"><b>Mobile Phones - On Sale !</b></string>
	<string name="create_item_title"><b>Sell Item</b></string>
	<string name="item_name"><b>Item Name:</b></string>
	<string name="seller_name"><b>Item Seller:</b></string>
	<string name="item_seller_contact"><b>Item Seller Contact:</b></string>
	<string name="item_price"><b>Item Price (Kshs):</b></string>
	<string name="item_category"><b>Choose Category:</b></string>
	<string name="item_location"><b>Seller Location:</b></string>
	<string name="save_button"><b>Save</b></string>
	<string name="cancel_button"><b>Cancel</b></string>
	<string name="viewItem"><b>View Item</b></string>
	<string name="map_tst">Map Test</string>
</resources>