<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="UselessParent,SpUsage" >
	<LinearLayout 
	    android:id="@+id/headerView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="10dip" 
        android:paddingBottom="10dip"
        android:background="@layout/home_bg">
        <TextView
           android:id="@+id/header_title"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/create_item_title"
           android:textSize="20dp"
           android:padding="10dp" />
	</LinearLayout>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp" >
         <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			    <RelativeLayout
			        android:id="@+id/top_layot_create_item"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" >
			
			        <LinearLayout
			            android:id="@+id/create_item_components"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:orientation="vertical" >
						
						<!-- Item Name -->
			            <TextView
			                android:id="@+id/create_item_name"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/item_name" />
			
			            <EditText
			                android:id="@+id/item_name"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:ems="10"
			                android:inputType="text" >
			
			                <requestFocus />
			            </EditText>
			            
			            <!-- Item Seller -->
			            <TextView
			                android:id="@+id/create_item_seller"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/seller_name" />
			
			            <EditText
			                android:id="@+id/seller_name"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:ems="10"
			                android:inputType="text" >
			            </EditText>
			            
			            <!-- Item Seller Contact -->
			            <TextView
			                android:id="@+id/create_item_seller_contact"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/item_seller_contact" />
			
			            <EditText
			                android:id="@+id/seller_contact"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:ems="10"
			                android:inputType="text" >
			            </EditText>
			            
			            <!-- Item Price -->
			            <TextView
			                android:id="@+id/create_item_price"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/item_price" />
			
			            <EditText
			                android:id="@+id/item_price"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:ems="10"
			                android:inputType="number" >
			            </EditText>
			            
			            <!-- Category -->
			            <TextView
			                android:id="@+id/create_item_category"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/item_category" />
						<Spinner
					        android:id="@+id/spinnerCategory" 
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content" />
			            
			            <!-- Item Location -->
			            <TextView
			                android:id="@+id/create_item_location"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:text="@string/item_location" />
			
			            <Spinner
					        android:id="@+id/spinnerLocation" 
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content" />
			        </LinearLayout>
			    </RelativeLayout>
			
			    <RelativeLayout
			        android:id="@+id/bottom_layot_create_item"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal" >
			        
			        <Button android:id="@+id/item_create_save_button"
						android:text="@string/save_button"
						android:typeface="serif" android:textStyle="bold"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
			        <Button android:id="@+id/item_create_cancel_button"
						android:text="@string/cancel_button"
						android:typeface="serif" android:textStyle="bold"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_toRightOf="@id/item_create_save_button" />
			    </RelativeLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>