<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="top|center"
        android:text="@string/welcome_message"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size" >
    </TextView>

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/ImageView2_Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/house"
                tools:ignore="ContentDescription" >
            </ImageView>

            <ImageView
                android:id="@+id/ImageView2_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/phones" >
            </ImageView>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/ImageView3_Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/tech"
                tools:ignore="ContentDescription" >

            </ImageView>

            <ImageView
                android:id="@+id/ImageView3_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/maps" >
            </ImageView>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_2"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size" >
    </TextView>

    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/version_bkgrd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:text="@string/app_version"
        android:textColor="@color/version_color"
        android:textSize="@dimen/version_size" >
    </TextView>

</LinearLayout>